# pilgrim

./: .gitignore  COPYRIGHT  Makefile.am  README.md  autogen.sh  configure.ac  pilgrim_app_generator  pilgrim_decoder  pilgrim_decompressor
SC21_ADAE/: catalyst_environment.txt  theta_environment.txt
SC21_ADAE/FLASH4.4/: README.txt
SC21_ADAE/FLASH4.4/Cellular/: flash.par  run_pilgrim.sh
SC21_ADAE/FLASH4.4/Sedov/: flash.par  run_pilgrim_4096.sh
SC21_ADAE/FLASH4.4/StirTurb/: flash.par  run_pilgrim.sh
SC21_ADAE/MILC_QCD_7.8.1/: run_pilgrim.sh  su3_rmd.1.sample-in
SC21_ADAE/NPB-3.4/Pilgrim/: run_pilgrim.sh
SC21_ADAE/NPB-3.4/ScalaTrace/: build_scalatrace.sh  run_scalatrace.sh
SC21_ADAE/OSU-Mirco-Benchmarks-5.7/: run_pilgirm.sh
include/: Makefile.mk  dlmalloc-2.8.6.h  pilgrim.h  pilgrim_addr_avl.h  pilgrim_consts.h  pilgrim_func_ids.h  pilgrim_interval_tree.h  pilgrim_logger.h  pilgrim_mem_hooks.h  pilgrim_mpi_objects.h  pilgrim_pattern_recognition.h  pilgrim_pthread_hooks.h  pilgrim_reader.h  pilgrim_sequitur.h  pilgrim_timings.h  pilgrim_utils.h  uthash.h
m4/: aclocal_cc.m4  aclocal_check_visibility.m4  aclocal_coverage.m4
maint/: Version.base.m4  code-cleanup.sh  version.m4
maint/hooks/: pre-commit
src/: .pilgrim_wrappers.c.swp  Makefile.mk  dlmalloc.c  pilgrim_addr_avl.c  pilgrim_init_finalize.c  pilgrim_interval_tree.c  pilgrim_logger.c  pilgrim_logger_recorder.c  pilgrim_mem_hooks-bak.c  pilgrim_mem_hooks-interval.c  pilgrim_mem_hooks.c  pilgrim_mpi_objects.c  pilgrim_pattern_recognition.c  pilgrim_pthread_hooks.c  pilgrim_read_args.c  pilgrim_read_args_special.c  pilgrim_reader.c  pilgrim_sequitur.c  pilgrim_sequitur_digram.c  pilgrim_sequitur_logger.c  pilgrim_sequitur_symbol.c  pilgrim_sequitur_utils.c  pilgrim_timings.c  pilgrim_utils.c  pilgrim_wrappers.c  pilgrim_wrappers_special.c
src/Sequitur/: pilgrim_sequitur.c  pilgrim_sequitur.h  pilgrim_sequitur_symbol.c
src/decoder/: Makefile.mk  pilgrim2text.c  pilgrim_app_generator.c  pilgrim_cfg_decoder.c  pilgrim_cst_decoder.c  pilgrim_metadata_decoder.c  pilgrim_read_args.c  pilgrim_read_args_special.c  pilgrim_reader.c  pilgrim_time_decoder.c
src/pilgrim_to_text/: Makefile.mk  pilgrim2text.c  pilgrim_cst_decoder.c
src/test/: Makefile.mk  pilgrim_cfg_decoder.c  pilgrim_cst_decoder.c  pilgrim_decompressor.c  pilgrim_to_text.c
src/vitter/: bitstream.c  bitstream.h  main.c  vitter.c  vitter.h
test/: Makefile.am  Makefile_common.mtest  a.out  comm_split.c  inter-communicator.c  inter-communicator2.c  job.sh  mpi_comm_idup.c  mpi_comm_spawn.c  pingpong.c  runtest.sh  stencil_2d_4pts.c  stencil_2d_5pts.c  stencil_3d_7pts.c  stencil_3d_7pts_cart.c  stencil_mpi_carttopo_neighcolls.c  test.c  test.sh  test_loop_opt.c  test_mpi.c  test_transpose.c  try_compressor.sh
test/generator/: evenodd_sendrecv.c  isendwaitall.c  nested.c  sendrecv.c  testfunc.c
test/logs/: 0.itf  0.mt  1.itf  1.mt  2.itf  2.mt  3.itf  3.mt
test/mpi/attr/: testlist.dtp
test/mpi/coll/: Makefile.am  testlist.cvar  testlist.dtp  testlist.gpu  testlist.in
test/mpi/errhan/: errcode.c
test/mpi/include/: mpitestconf.h  mpitestconf.h.in~
test/mpi/info/: testlist
test/mpi/manual/mpi_t/: Makefile.in
test/mpi/misc/: Makefile.am  Makefile.in  sendrecv.c  testmalloc.c  waittest.c
test/mpi/pt2pt/: Makefile.am  icsend.c  testlist.dtp  testlist.gpu  testlist.in
test/mpi/rma/: testlist.dtp  testlist.gpu
test/mpi/threads/coll/: Makefile.in
test/mpi/threads/comm/: Makefile.in
test/mpi/threads/init/: Makefile.in
test/mpi/threads/mpi_t/: Makefile.in
test/mpi/threads/perf/: Makefile.in
test/mpi/threads/pt2pt/: Makefile.in
test/mpi/threads/rma/: Makefile.in
test/mpi/threads/spawn/: Makefile.in
test/mpi/util/: Makefile.am  Makefile.in  mtest_common.c
test/tracing/: Makefile.am  Makefile.in  comm_idup.c  comm_split.c  intercomm.c  intercomm2.c  openmp_example.c  stencil_2d_5pts.c  stencil_3d_7pts_cart.c  threads.c
tools/: .instrument.py.swp  api_generator.py  codegen.py  generate_call_writer.py  generate_reader.py  instrument.py  mpi_functions.pickle
