##                                             
## Copyright (C) by Argonne National Laboratory
##     See COPYRIGHT in top-level directory
## 

AM_CFLAGS = -lm

noinst_PROGRAMS = 	pingpong 				\
				  	comm_idup				\
					comm_spawn				\
					comm_split				\
					intercomm2				\
					intercomm				\
					pingpong				\
					stencil_2d_5pts			\
					stencil_3d_7pts			\
					stencil_3d_7pts_cart	\
					test					\
					test_loop_opt			\
					test_transpose			

