##                                             
## Copyright (C) by Argonne National Laboratory
##     See COPYRIGHT in top-level directory
## 

AM_CFLAGS = -lm

noinst_PROGRAMS = 	evenodd_sendrecv	\
					isendwaitall		\
					nested				\
					sendrecv			\
					testfunc			\
					testmalloc			\
					waittest

